portfolio section's layout issue is resolved

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ video {
   height: 3.5em;
 }
 #heroContainer {
-  overflow-y: hidden;
+  overflow-y: auto;
   transform-style: preserve-3d;
   z-index: 1;
 }
@@ -120,7 +120,7 @@ video {
 }
 @media (min-width: 769px) {
   #heroDisplay {
-    margin: 150px 0 -20px !important;
+    margin: 30px 0 -20px !important;
     padding-top: 2em;
     height: 92% !important;
   }
@@ -156,7 +156,7 @@ video {
 @media (min-width: 920px) {
   #name {
     margin-top: 0.35em !important;
-    font-size: 7em !important;
+    font-size: 6em !important;
   }
 }
 #career-title {
@@ -204,7 +204,7 @@ video {
 }
 @media (min-width: 750px) {
   #quote {
-    padding: 0 1.5em !important;
+    padding: 1.5em !important;
     margin: 3px 0 20px !important;
   }
 }
@@ -224,6 +224,7 @@ video {
   #quote {
     font-size: 1.6em;
     margin-bottom: 0em !important;
+    padding-bottom: 2em !important;
   }
 }
 
@@ -301,8 +302,8 @@ h5 {
 
 @media (min-width: 768px) {
   #aboutMeImg {
-    width: 25%;
-    height: 23%;
+    width: 20%;
+    height: 29%;
   }
 }
 
@@ -486,6 +487,21 @@ h3 {
 .projectLink:hover .portImg {
   visibility: visible;
 }
+
+@media (min-width: 760px) {
+.card-layout {
+  display: flex;
+  justify-content: center;
+}
+}
+
+@media (min-width: 760px) {
+  .card {
+    
+    margin: 0em 3em !important;
+  }
+  }
+
 textarea {
   background-color: rgba(255, 255, 255, 0.255);
 }
@@ -494,7 +510,7 @@ textarea {
 
 .contact-title {
   color: var(--secondary-color) !important;
-  font-size: 3em !important;
+  font-size: 2.8em !important;
 }
 
 #fs-frm {
@@ -507,9 +523,11 @@ hr {
 }
 
 .contact-form {
-  border: 0.05em solid var(--secondary-color);
-  -webkit-box-shadow: 0px 2px 8px 6px rgba(79, 79, 79, 0.35);
-  box-shadow: 0px 2px 8px 6px rgba(79, 79, 79, 0.3);
+  /* border: 0.05em solid var(--secondary-color); */
+   /* -webkit-box-shadow: 1px 2px 15px 4px #000000;
+  box-shadow: 1px 2px 15px 4px #373434; */
+  padding-left: 3.5em;
+  padding-right: 3.5em;
   background-color: var(--tertiary-color);
 }
 
